# gaps

./: .gitignore  LICENSE.md  README.md  pyproject.toml
src/gaps/: __init__.py  assign.py
