[tool.poetry]
name = "gaps"
version = "0.1.0"
description = "Generalized assignment problem solver"
authors = ["Stijn de Gooijer <stijn@degooijer.io>"]
license = "MIT"
keywords = ["assignment"]
repository = "https://github.com/stinodego/gaps"
readme = "README.md"
packages = [
    { include = "gaps", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
frozendict = "^2.0.3"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.2"
pylint = "^2.9.3"
mypy = "^0.910"
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.5"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
files = "src"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage]
    [tool.coverage.run]
    source = ["src"]
    branch = true
    omit = ["src/pmnn_prep/pipelines/labels/*"]
    [tool.coverage.report]
    # fail_under = 100
    skip_covered = true
    show_missing = true
    exclude_lines = [
        "if __name__ == .__main__.:",
        "pragma: no cover",
    ]
